<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/linearLayout">

    <Button
            android:id="@+id/btn_to_rxjava"
            style="@style/itemStyle"
            android:text="@string/rxjava_study"

            android:layout_height="0dp"
            android:layout_width="0dp" android:layout_marginTop="6dp" android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/btn_to_remoteviews"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
    />


    <Button
            android:id="@+id/btn_to_remoteviews"
            style="@style/itemStyle"
            android:text="@string/remoteviews_study"

            android:layout_height="0dp"
            android:layout_width="0dp" app:layout_constraintTop_toBottomOf="@+id/btn_to_rxjava"
            android:layout_marginBottom="13dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_to_threadLocal" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>


    <Button
            android:id="@+id/btn_to_threadLocal"
            style="@style/itemStyle"
            android:text="@string/threadlocal_study"

            android:layout_height="0dp"
            android:layout_width="0dp" app:layout_constraintTop_toBottomOf="@+id/btn_to_remoteviews"
            android:layout_marginBottom="12dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_to_threadhandler"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <Button
            android:id="@+id/btn_to_threadhandler"
            style="@style/itemStyle"
            android:text="@string/threadhandler_study"

            android:layout_height="0dp"
            android:layout_width="0dp" app:layout_constraintTop_toBottomOf="@+id/btn_to_threadLocal"
            android:layout_marginBottom="13dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_to_lifecircle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <Button
            android:id="@+id/btn_to_lifecircle"
            style="@style/itemStyle"
            android:text="@string/activity_study"

            android:layout_height="0dp"
            android:layout_width="0dp" app:layout_constraintTop_toBottomOf="@+id/btn_to_threadhandler"
            android:layout_marginBottom="12dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/to_asynctask" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>


    <Button
            android:id="@+id/to_asynctask"
            style="@style/itemStyle"
            android:text="@string/asynctask"


            android:layout_height="0dp"
            android:layout_width="0dp" app:layout_constraintTop_toBottomOf="@+id/btn_to_lifecircle"
            android:layout_marginBottom="12dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/to_window_study" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    <Button


            android:id="@+id/to_window_study"
            style="@style/itemStyle"
            android:text="@string/windowmanager"


            android:layout_height="0dp"
            android:layout_width="0dp" app:layout_constraintTop_toBottomOf="@+id/to_asynctask"
            android:layout_marginBottom="13dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/to_okhttp_study" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    <Button
            android:id="@+id/to_okhttp_study"
            style="@style/itemStyle"
            android:text="@string/okhttp"


            android:layout_height="0dp"
            android:layout_width="0dp" app:layout_constraintTop_toBottomOf="@+id/to_window_study"
            android:layout_marginBottom="12dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/to_mvvm_study" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>


    <Button
            android:id="@+id/to_mvvm_study"
            style="@style/itemStyle"
            android:text="@string/mvvm"
            android:layout_height="0dp"
            android:layout_width="0dp" app:layout_constraintTop_toBottomOf="@+id/to_okhttp_study"
            android:layout_marginBottom="302dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>

</android.support.constraint.ConstraintLayout>